force-app/main/default/objects/Implementation_Task_Template__c/Implementation_Task_Template__c.object-meta.xml
<CustomObject>
    <label>Implementation Task Template</label>
    <nameField>
        <label>Implementation Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementation Task Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>