force-app/main/default/objects/Implementation_Task_Template__c/fields/Dependency__c.field-meta.xml
<CustomField>
    <fullName>Dependency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Dependency</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You cannot choose a Task Template which is related to a different Implementation Plan</errorMessage>
        <filterItems>
            <field>Implementation_Task_Template__c.Implementation_Plan_Template__c</field>
            <operation>equals</operation>
            <valueField>$Source.Implementation_Plan_Template__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Implementation_Task_Template__c</referenceTo>
    <relationshipLabel>Implementation Task Template</relationshipLabel>
    <relationshipName>Implementation_Task_Template</relationshipName>
    <type>Lookup</type>
</CustomField>