force-app/main/default/objects/Implementation_Task_Template__c/fields/Implementation_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Plan Template</label>
    <referenceTo>Implementation_Plan_Template__c</referenceTo>
    <relationshipLabel>Implementation Task Template</relationshipLabel>
    <relationshipName>Implementation_Task_Template</relationshipName>
    <type>Lookup</type>
</CustomField>