force-app/main/default/objects/Implementation_Task_Template__c/fields/Revenue_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition__c</fullName>
    <label>Revenue Recognition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software Go-Live Date</fullName>
            </value>
            <value>
                <fullName>Add-On/Module Go-Live Date</fullName>
            </value>
            <value>
                <fullName>Hardware Shipped Date</fullName>
            </value>
            <value>
                <fullName>Training Execution Date</fullName>
            </value>
            <value>
                <fullName>Data Conversion Complete Date</fullName>
            </value>
            <value>
                <fullName>Consulting Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>