force-app/main/default/objects/Implementation_Task_Template__c/fields/Task_Duration__c.field-meta.xml
<CustomField>
    <fullName>Task_Duration__c</fullName>
    <label>Task Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>