force-app/main/default/objects/Implementation_Task_Template__c/fields/Unique_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Unique_Sequence__c</fullName>
    <description>Used to set a unique Id which is a combination of the Parent Implementation Plan Template by a Process Builder. This is to ensure that there is not an Implementation Task Template with the same sequence as another Implementation Task Template which shares the same Implementation Plan Template</description>
    <label>Unique Sequence</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>