force-app/main/default/objects/Implementation_Task_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Implementation_Plan_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>