force-app/main/default/objects/Implementation_Task_Template__c/listViews/RxWorks_Hardware_Implementation_Task_Template.listView-meta.xml
<ListView>
    <fullName>RxWorks_Hardware_Implementation_Task_Template</fullName>
    <filterScope>Queue</filterScope>
    <label>RxWorks Hardware</label>
    <queue>RxWorks_Hardware</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>