force-app/main/default/objects/Implementation_Task_Template__c/listViews/RxWorks_Implementation_EMEA_Implementation_Task_Template.listView-meta.xml
<ListView>
    <fullName>RxWorks_Implementation_EMEA_Implementation_Task_Template</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>RxWorks Implementation EMEA</label>
    <queue>RxWorks_Implementation_EMEA</queue>
    <sharedTo>
        <group>RxWorks_Implementation_EMEA</group>
    </sharedTo>
</ListView>