force-app/main/default/objects/Implementation_Task_Template__c/listViews/RxWorks_Implementation_Implementation_Task_Template.listView-meta.xml
<ListView>
    <fullName>RxWorks_Implementation_Implementation_Task_Template</fullName>
    <filterScope>Queue</filterScope>
    <label>RxWorks Implementation</label>
    <queue>RxWorks_Implementation</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>