force-app/main/default/objects/Implementation_Task_Template__c/listViews/VisionVPM_Hardware_Implementation_Task_Template.listView-meta.xml
<ListView>
    <fullName>VisionVPM_Hardware_Implementation_Task_Template</fullName>
    <filterScope>Queue</filterScope>
    <label>VisionVPM Hardware</label>
    <queue>VisionVPM_Hardware</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>