force-app/main/default/objects/Implementation_Task_Template__c/listViews/VisionVPM_Implementation_Implementation_Task_Template.listView-meta.xml
<ListView>
    <fullName>VisionVPM_Implementation_Implementation_Task_Template</fullName>
    <columns>NAME</columns>
    <columns>Implementation_Plan_Template__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>VisionVPM Implementation</label>
    <queue>VisionVPM_Implementation</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>